--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
           # extended: true
 
       - name: Build
-        run: cd site && hugo --minify
+        run: hugo -s site --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
